--- a/Building_Energy_Benchmarking.ipynb
+++ b/Building_Energy_Benchmarking.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7ca5428f",
+   "metadata": {},
+   "source": [
+    "# CEE 501 - Final Project: Building Energy Benchmarking in Seattle\n",
+    "# Github Repository: [Link](https://github.com/Mounusha25/CEE501_Final_project)\n",
+    "## Mounusha Metti & Kashish patel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "54e047df",
    "metadata": {},
    "source": [
